# insta_saver_bot

./: README.md  app.py  pyproject.toml  requirements.txt
data/: config.py
handlers/users/: __init__.py  admin.py  help.py  profile.py  start.py  url.py
utils/db_api/: postgresql.py
