[tool.poetry]
name = "Instagram Saver"
version = "0.1.0"
description = ""
authors = ["Lovely coder"]
readme = "README.md"
packages = [{include = "instagramSaverBot"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"